--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,15 @@
-.
+*{
+  margin: 0;
+  padding: 0;
+  font-size: 5vw;
+  background: black;
+  color: grey;
+  text-align: center;
+}
+button {
+  color: yellow;
+  border 2px orange solid
+  padding: 5vw;
+  margin: 5px;
+  text-align: center;
+}
