--- a/style/index.css
+++ b/style/index.css
@@ -1,18 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 *{
-  margin: 0;
+  
   padding: 0;
   font-size: 5vw;
   background: black;
   color: grey;
   text-align: center;
+  font-family: 'Poppins', sans-serif;;
 }
 button {
-  color: red;
+  border: 0.6vw #F9811F solid;
+  border-radius: 3vw;
   background: grey;
-  border 0.5vw orange solid
-  padding: 5vw;
-  margin: 1vw;
-  height: 10vw;
-  width: 10vw;
-  text-align: center;
+  color: #E2A60D;
+  text-decoration: none;
+  padding: 1vw;
+}
+.paginas {
+  margin-top: 5vw;
 }
