--- a/pages/style/horadodia.css
+++ b/pages/style/horadodia.css
@@ -1,1 +1,46 @@
-
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+      * {
+        height: 20vw;
+        margin-top: 15vw;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        background: rgb(70, 142, 236);
+        font-family: 'Poppins', sans-serif;
+      }
+      section {
+        background: white;
+        color: black;
+        border-radius: 2vw;
+        
+        box-shadow: 1vw 1vw 1vw black;
+        height: 55vw;
+        width: 80vw;
+        margin: 10vw;
+      
+      }
+      .imgdia {
+        height: 30vw;
+        margin-right: 18vw;
+        margin-top: -20vw;
+      }
+      .imgtarde {
+        height: 35vw;
+        margin-top: -20vw;
+        margin-left: 10.5vw;
+      }
+      .imgnoite {
+        height: 53vw;
+        margin-top: -22vw;
+        margin-right: 2.5vw;
+      }
+      .imgmadrugada {
+        height: 80vw;
+        margin-top: -39.5vw;
+        margin-right: 5vw;
+      }
+      p {
+        padding-top: 5vw;
+      }
