--- a/index.css
+++ b/index.css
@@ -1,21 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-*{
-  
+body{
   padding: 0;
-  font-size: 5vw;
-  background: black;
-  color: grey;
+  background: #614079;
+  color: white;
   text-align: center;
   font-family: 'Poppins', sans-serif;;
 }
 button {
-  border: 0.6vw #F9811F solid;
+  border: 0.3vw #F9811F solid;
   border-radius: 3vw;
   background: grey;
   color: #E2A60D;
   text-decoration: none;
   padding: 1vw;
+  height: 15vw;
+  width: 10vw;
+  font-size: 5vw;
+  margin: 1vw;
+  margin-top: 55vw;
+  float: right;
 }
-.paginas {
+button.left {
+  border: 0.3vw #F9811F solid;
+  border-radius: 3vw;
+  background: grey;
+  color: #E2A60D;
+  text-decoration: none;
+  padding: 1vw;
+  height: 15vw;
+  width: 10vw;
+  font-size: 5vw;
+  margin: 1vw;
+  margin-top: 55vw;
+  float: left;
+}
+section {
+  margin-top: 13vw;
+  margin-left: 17vw;
+  background: white;
+  border-radius: 2vw;
+  box-shadow: 1vw 1vw 1vw black;
+  text-align: center;
+  width: 60vw;
+  height: 90vw;
+}
+p {
+  font-size: 5vw;
+}
+p.descricao {
   margin-top: 5vw;
+  font-size: 4vw;
+  color: #FFFFFF;
+}
+p.bolinhas {
+  font-size: 5vw;
+  color: black;
+  margin-top: -0.5vw;
+}
+h1 {
+  margin-top: 5vw;
+}
+img {
+  margin-top: 10vw;
+  height: 70vw;
+  border-radius: 4vw;
 }
