--- a/pages/style/horadodia.css
+++ b/pages/style/horadodia.css
@@ -1,6 +1,6 @@
 /******************************************************/
 
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
       
       * {
         height: 20vw;
@@ -49,7 +49,7 @@
       h1 {
         font-size: 6vw;}
       
-      button {
+      input {
         text-align: center;
         height: 5vh;
         font-size: 3vh;
